public/css/style.css
/************************
        Utility
************************/

* {
	box-sizing: border-box;
}

html, body {
	position: relative;
	background-color: #B2DFDB;
	min-height: 100vh;
}

.go-left {
	float: left !important;
}

.go-right {
	float: right !important;
}

.floating-container {
	border-radius: 15px !important;
	background-color: #f2f2f2;
	overflow: hidden;
	margin: 5px;
}

.nav, .pagination, .carousel, .panel-title, a { 
	cursor: pointer; 
}

.section-header {
	border-radius: 15px 15px 0px 0px;
	padding: 0px 10px;
	height: 60px;
	line-height: 60px;
	background-color: #D3D3D3;
}

.ng-binding {
	display: block;
	padding: 10px 15px;
}

.section-text {
	margin: 0px 10px;
	font-weight: lighter;
	display: inline;
	text-align: center;
}

.dropdown .section-text {
	padding-left: 0px;
}

.bottom-container {
	position: absolute;
	bottom: 0px;
	padding: 10px 10px;
	width: 100%;
}

.big-size {
	font-size: 20px;
}

.regular-size {
	font-size: 16px;
}

.small-padding {
	padding: 5px;
}

.normal-padding {
	padding: 15px;
}

.center-it {
	margin: 0 auto;
}

.bold-text {
	font-weight: bold;
}

@media (max-width: 600px) {
	.desktop-only {
		display: none !important;
	}

	.col-sm-12 {
		padding-left: 3px;
		padding-right: 3px;
	}
}

.inline-display {
	display: inline !important;
}

.container {
	width: 100%;
	padding-left: 25px;
	padding-right: 25px;
}

@media(max-width: 978px) {
	.container {
		padding-left: 0px;
		padding-right: 0px;
	}

	.col-sm-12 {
		padding-left: 5px;
		padding-right: 5px;
	}
}



/************************
         Schedule
*************************/

/* Header */

.schedule-header {
	display: -webkit-flex;
	display: flex;
	-webkit-align-items: center;
	align-items: center;
}

.social-icons {
	display: -webkit-flex;
	display: flex;
	-webkit-align-items: center;
	align-items: center;
}
.social-icons a+a {
	margin-left: 10px;
}
.social-icons i {
	color: black;
}
	.social-icons i:hover {
		color: #337ab7;
	}

/* Schedule */

div.fc-view, .fc-today {
	background-color: #EFEFEF !important;
}

.fc-event-title {
	font-weight: bold;
}

.fc-event-time {
	font-weight: bold;
}

.fc-event-inner {
	color: black;
}

.fc-title {
	white-space:nowrap;
	text-overflow:ellipsis !important;
	overflow: hidden;
	width: 100%;
}

@media(max-width: 500px) {
	.fc-day-header {
		font-size: 10px !important;
	}
	.fc-title {
		font-size: 10px !important;
	}
}

#prev-caret {
	color: #ffffff;
	font-size: 50px;
	position: absolute;
	top: 6px;
	left: 13px;
}

#next-caret {
	color: #ffffff;
	font-size: 50px;
	position: absolute;
	top: 6px;
	left: 40px;
}

.schedule-number {
	padding-top: 0;
	padding-bottom: 0;
}

.toggle-caret {
	color: #ffffff;
	font-size: 50px;
	cursor: pointer;
}

.add-courses-button {
	height: 40px;
	position: absolute;
	top: 10px;
	right: 13px;
}

.top-right {
	position: absolute;
	top: 5px !important;
	right: 5px !important;
}

.instructions {
	position: relative !important;
}

/************************
        Accordion
*************************/

@media (max-width: 768px) {
	.panel-body {
		padding: 5px;
	}
}
button.dropdown-toggle {
	font-size: 18px;
	display: inline-block;
	margin-top: 0px;
}

div.dropdown {
	display: table-cell;
	vertical-align: middle;
	text-align: center;
}

div.course-search {
	padding-top: 10px;
	padding-left: 16px;
	padding-right: 16px;
	width: 100%;
}

div.course-search > input.course-search.form-control {
	border-top-right-radius: 5px;
	border-bottom-right-radius: 5px;
	font-size: 20px;
}

h4.panel-title {
	position: relative;
}

.add-button {
	position: absolute;
	top: 3px;
	right: 5px;
	padding: 10px;
	font-size: 22px;
}

.add-button > .add {
	color: #262626;
}
.add-button > .add:hover {
	color: green;
}
.add-button > .added {
	color: green;
}

.add-button > .added:hover {
	color: #8c001a;
}

.panel-default > .panel-heading {
	background-color: #BBDEFB;
	border-radius: 0px;
	padding: 0px;
}

.panel-default > .panel-heading .accordion-toggle > span {
	padding: 15px 15px;
}

/*Single panel*/
.panel-group .panel {
	border-color: black;
	border-width: 1px;
	border-radius: 5px;
	overflow: hidden;
}


.panel-group {
	margin-bottom: 0px; /* override bootstrap 20px */
}
.panel-group + .panel-group {
	margin-top: 20px;
}

div.panel-body {
	background-color: #E9EFF9 !important;
	border-radius: 0px;
	min-width: 100%;
}

div.panel-collapse {
	background-color: #E9EFF9 !important;
}

.course-sub-info {
	font-size: 12px;
	font-color: grey;
	font-weight: lighter;
}

.course-sub-info span {
	padding-top: 0;
	padding-bottom: 0;
}

.course-description {
	font-size: 16px;
}

/*#welcome-banner {
	margin-top: 70px;
	border-radius: 15px;
}*/

/*****************
    Preferences
******************/

.flex-container {
	display:-webkit-inline-flex;
	display: inline-flex;
	flex-direction: row;
	-webkit-align-items: center;
	align-items: center;
	justify-content: center;
	-webbit-justify-content: center;
	padding-left: 0px;
	width: 100%;
}

.pref-flex-item {
	width: 32%;
}

.button-flex-item {
	display: inline-block;
}

.slider-container {
	width: 100%;
	padding-left: 10px;
}

.pref-label {
	padding: 10px;
}

.pref-header {
	height:15px;
	text-align: center;
	margin: 0 auto;
}

.divider-full-height {
	border-left:1px solid #D3D3D3;
	top: 0px;
	height: 60px;
	margin: 5px;
}

.table-container {
 	display: table;
    height: 100%;
    width: 100%;
}

.button-container {
	padding-right: 10px;
}

.table-cell {
	display: table-cell;
	vertical-align: middle;
	width: 2px;
	padding-left: 10px;
}

.pref-flex-item-mobile {
	display: none !important;
}

@media(max-width: 768px) {
	.pref-flex-item-mobile {
		display: inline !important;
		width: 100%;
	}

	.pref-flex-item {
		display: none !important;
	}

	.desktop-only {
		display: none !important;
	}
}

.horiz-padding {
	padding: 0 15px;
}


/***********************
      Added List
************************/

.view-schedules {
	margin-left: auto;
	margin-top: 8px;
	margin-bottom: 8px;
	height: 41px;
}

.added-list {
	display: -webkit-flex;
	display: flex;
	-webkit-flex-direction: column;
	flex-direction: column;
	min-height: 73px;
	background-color: white;
	left: 0px;
	padding-left: 0px;
	overflow: hidden;
}

.added-list .list-group-item {
	display: -webkit-flex;
	display: flex;
	-webkit-align-items: center;
	align-items: center;
	font-size: 1.5em;
	border-radius: 0px;
	padding: 0;
	border: none;
	border-top: 1px solid #ddd;
	border-bottom: 1px solid #ddd;
}

.added-list .list-group-item .course-asString {
	margin-right: auto;
	padding: 10px 15px;
}

.added-list .list-group-item i.fa {
	margin-right: 20px;
	color: black;
}
	.added-list .list-group-item i.fa:hover {
		color: #8c001a;
	}

.added-footer {
	margin-top: auto;
	padding: 15px;
	border: 1px solid white;
	border-radius: 0px 0px 15px 15px;
}

.remove-icon {
	border-radius: 3px;
	padding: 5px 5px;
	position: absolute;
	top: 13px;
	right: 13px;
	color: #ffffff;
	font-size: 15px;
}

.generate-schedules-button {
	border-radius: 3px;
	padding: 5px 5px;
	position: absolute;
	top: 9px;
	right: 13px;
	color: #ffffff;
	height: 40px;
}

.added-container {
	position: fixed;
	/*top: 70px;*/
	width: 36%;
}

@media (max-width: 768px) {
	.added-container {
		display: none !important;
	}
}

/*************************
           Modal
**************************/

div.modal-content {
	border-radius: 15px;
	position: relative;
}

.modal-container {
	margin: 0px !important;
}

.sad-dialog {
	padding: 5px 5px;
}

/************************
          Header
*************************/

.nav-container {
	position: fixed;
	top: 0px;
	height: 55px;
	margin-bottom: 10px;
	padding: 0px 10px;
	line-height: 60px;
}

.navbar-brand {
	display: -webkit-flex;
	display: flex;
	-webkit-align-items: center;
	align-items: center;
}

.nav-container > * {
	margin-right: 10px;
	height: 41px;
}
.nav-container > .back-to-browse {
	margin-right: auto;
}

.navbar.navbar-default {
	width: 100%;
	z-index: 100;
	background-color: #e7e7e7;
	border-bottom: 1px solid gray;
}

@media(max-width: 768px) {
	.navbar.navbar-default {
		position: fixed !important;
		top: 0px;
	}

	.column-container {
		margin-top: 70px;
	}
}

.column-container {
	margin-top: 70px;
}

.navbar .navbar-right {
	margin-right: 0px;
}

img.navbar-brand-image {
	float: left;
	height: 30px;
	vertical-align: middle;
	margin-right: 10px;
}

.navbar button.btn {
	float: right;
	margin: 8px;
}

@media(min-width: 768px) {
	.navbar button.btn {
		display: none;
	}
}

/************************
          Footer
*************************/

.footer-bit, .push {
	height: 4em;
}

.wrapper {
	min-height: 100%;
	height: 100%;
	margin: 0 auto -4em;
}

.footer-bit {
	display: -webkit-flex;
	display: flex;
	-webkit-align-items: center;
	align-items: center;

	margin-top: 80px;
	background-color: #e7e7e7;
	padding: 20px;
	border-radius: 5px;
	border: 1px solid #e7e7e7;
}

.footer-bit i {
	color: black;
}

.footer-bit i:hover {
	color: #337ab7;
}

